# consulta_adesoes

./: .gitignore  main.py  pyproject.toml
