[project]
name = "consulta-adesoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
